--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <ul>
                     <li><a href="#home">Beranda</a></li>
                     <li><a href="#profil">Profil</a></li>
+                    <li><a href="#galeri">Galeri</a></li>
                     <li><a href="#kesimpulan">Kesimpulan</a></li>
                 </ul>
             </nav>
@@ -35,37 +36,65 @@
         <div class="container">
             <h3 class="title">PROFIL SEKOLAH</h3>
             <div class="content-box">
-                <p>SDN 26 Tamanroja adalah lembaga pendidikan dasar yang berlokasi di Kabupaten Pangkep. Sekolah ini berkomitmen untuk menyelenggarakan pendidikan yang inklusif dan berkualitas bagi seluruh peserta didik guna menciptakan generasi yang cerdas dan mandiri.</p>
+                <p>SDN 26 Tamanroja merupakan sekolah dasar negeri yang berkomitmen memberikan layanan pendidikan terbaik di Kabupaten Pangkep. Fokus kami adalah menciptakan lingkungan belajar yang religius, cerdas, dan mandiri bagi seluruh peserta didik.</p>
                 
                 <div class="info-grid">
                     <div class="info-item">
-                        <h4>Lokasi</h4>
-                        <p>Kabupaten Pangkep, Sulawesi Selatan</p>
+                        <h4>📍 Lokasi</h4>
+                        <p>Kecamatan Minasatene, Kabupaten Pangkep, Sulawesi Selatan</p>
                     </div>
                     <div class="info-item">
-                        <h4>Status</h4>
-                        <p>Sekolah Negeri</p>
+                        <h4>🏫 Status</h4>
+                        <p>Sekolah Negeri - Akreditasi Terdaftar</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="kesimpulan" class="section gray-bg">
+    <section id="galeri" class="section gray-bg">
+        <div class="container">
+            <h3 class="title">GALERI KEGIATAN</h3>
+            <div class="gallery-grid">
+                <div class="gallery-card">
+                    <img src="Kegiatan 1.png" alt="Kegiatan 1">
+                    <div class="caption">Guru, siswa dan orang tua siswa</div>
+                </div>
+                <div class="gallery-card">
+                    <img src="Kegiatan 2.png" alt="Kegiatan 2">
+                    <div class="caption">Ekstrakurikuler Pramuka</div>
+                </div>
+                <div class="gallery-card">
+                    <img src="Kegiatan 3.png" alt="Kegiatan 3">
+                    <div class="caption">Kegiatan Peringatan HUT RI</div>
+                </div>
+                <div class="gallery-card">
+                    <img src="Kegiatan 4.png" alt="Kegiatan 4">
+                    <div class="caption">Guru dan siswa setelah kegiatan seni</div>
+                </div>
+                <div class="gallery-card">
+                    <img src="Kegiatan 5.png" alt="Kegiatan 5">
+                    <div class="caption">Kegiatan seni pada peringatan hari guru</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="kesimpulan" class="section">
         <div class="container">
             <h3 class="title">KESIMPULAN</h3>
             <div class="conclusion-box">
-                <p>Melalui website ini, diharapkan masyarakat dapat memperoleh informasi mengenai profil dan perkembangan SDN 26 Tamanroja. Kami terus berupaya meningkatkan mutu pendidikan demi masa depan anak bangsa yang lebih baik.</p>
+                <p>SDN 26 Tamanroja terus berinovasi dalam mengintegrasikan nilai-nilai karakter dan teknologi dalam pembelajaran. Melalui kolaborasi antara pihak sekolah dan orang tua, kami yakin dapat mencetak generasi emas yang membanggakan bangsa.</p>
             </div>
         </div>
     </section>
 
     <footer>
-        <p>&copy; 2024 SDN 26 Tamanroja.</p>
+        <p>&copy; 2026 SDN 26 Tamanroja. | Kabupaten Pangkep</p>
     </footer>
 
     <a href="https://wa.me/6282194341995" class="whatsapp-btn" target="_blank">
-        <span>💬 Hubungi Kami</span>
+        <span>💬 Hubungi Kami via WA</span>
     </a>
 
 </body>
