--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="info-grid">
                     <div class="info-item">
                         <h4>📍 Lokasi</h4>
-                        <p>Kecamatan Minasatene, Kabupaten Pangkep, Sulawesi Selatan</p>
+                        <p>Kecamatan Labbakkang, Kabupaten Pangkep, Sulawesi Selatan</p>
                     </div>
                     <div class="info-item">
                         <h4>🏫 Status</h4>
@@ -99,3 +99,4 @@
 
 </body>
 </html>
+
