--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SDN 26 TAMANROJA - Profil Resmi</title>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Roboto:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -32,71 +32,89 @@
         </div>
     </section>
 
-    <section id="profil" class="section">
-        <div class="container">
-            <h3 class="title">PROFIL SEKOLAH</h3>
-            <div class="content-box">
-                <p>SDN 26 Tamanroja merupakan sekolah dasar negeri yang berkomitmen memberikan layanan pendidikan terbaik di Kabupaten Pangkep. Fokus kami adalah menciptakan lingkungan belajar yang religius, cerdas, dan mandiri bagi seluruh peserta didik.</p>
-                
-                <div class="info-grid">
-                    <div class="info-item">
-                        <h4>📍 Lokasi</h4>
-                        <p>Kecamatan Labbakkang, Kabupaten Pangkep, Sulawesi Selatan</p>
+    <main>
+        <section id="profil" class="section">
+            <div class="container">
+                <h3 class="title">PROFIL SEKOLAH</h3>
+                <div class="content-box">
+                    <p class="description">SDN 26 Tamanroja merupakan sekolah dasar negeri yang berkomitmen memberikan layanan pendidikan terbaik di Kabupaten Pangkep. Fokus kami adalah menciptakan lingkungan belajar yang religius, cerdas, dan mandiri bagi seluruh peserta didik.</p>
+                    
+                    <div class="info-grid">
+                        <div class="info-item">
+                            <span class="icon">📍</span>
+                            <h4>Lokasi</h4>
+                            <p>Kecamatan Labbakkang, Kabupaten Pangkep, Sulawesi Selatan</p>
+                        </div>
+                        <div class="info-item">
+                            <span class="icon">🏫</span>
+                            <h4>Status</h4>
+                            <p>Sekolah Negeri - Akreditasi Terdaftar</p>
+                        </div>
                     </div>
-                    <div class="info-item">
-                        <h4>🏫 Status</h4>
-                        <p>Sekolah Negeri - Akreditasi Terdaftar</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="galeri" class="section gray-bg">
+            <div class="container">
+                <h3 class="title">GALERI KEGIATAN</h3>
+                <div class="gallery-grid">
+                    <div class="gallery-card">
+                        <div class="img-container">
+                            <img src="Kegiatan 1.png" alt="Kegiatan Guru Siswa Orang Tua">
+                        </div>
+                        <p class="caption">Guru, siswa dan orang tua siswa</p>
+                    </div>
+
+                    <div class="gallery-card">
+                        <div class="img-container">
+                            <img src="Kegiatan 2.png" alt="Pramuka">
+                        </div>
+                        <p class="caption">Ekstrakurikuler Pramuka</p>
+                    </div>
+
+                    <div class="gallery-card">
+                        <div class="img-container">
+                            <img src="Kegiatan 3.png" alt="HUT RI">
+                        </div>
+                        <p class="caption">Kegiatan Peringatan HUT RI</p>
+                    </div>
+
+                    <div class="gallery-card">
+                        <div class="img-container">
+                            <img src="Kegiatan 4.png" alt="Kegiatan Seni">
+                        </div>
+                        <p class="caption">Guru dan siswa setelah kegiatan seni</p>
+                    </div>
+
+                    <div class="gallery-card">
+                        <div class="img-container">
+                            <img src="Kegiatan 5.png" alt="Hari Guru">
+                        </div>
+                        <p class="caption">Kegiatan seni pada peringatan hari guru</p>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <section id="galeri" class="section gray-bg">
-        <div class="container">
-            <h3 class="title">GALERI KEGIATAN</h3>
-            <div class="gallery-grid">
-                <div class="gallery-card">
-                    <img src="Kegiatan 1.png" alt="Kegiatan 1">
-                    <div class="caption">Guru, siswa dan orang tua siswa</div>
-                </div>
-                <div class="gallery-card">
-                    <img src="Kegiatan 2.png" alt="Kegiatan 2">
-                    <div class="caption">Ekstrakurikuler Pramuka</div>
-                </div>
-                <div class="gallery-card">
-                    <img src="Kegiatan 3.png" alt="Kegiatan 3">
-                    <div class="caption">Kegiatan Peringatan HUT RI</div>
-                </div>
-                <div class="gallery-card">
-                    <img src="Kegiatan 4.png" alt="Kegiatan 4">
-                    <div class="caption">Guru dan siswa setelah kegiatan seni</div>
-                </div>
-                <div class="gallery-card">
-                    <img src="Kegiatan 5.png" alt="Kegiatan 5">
-                    <div class="caption">Kegiatan seni pada peringatan hari guru</div>
+        <section id="kesimpulan" class="section">
+            <div class="container">
+                <h3 class="title">KESIMPULAN</h3>
+                <div class="conclusion-box">
+                    <p>SDN 26 Tamanroja terus berinovasi dalam mengintegrasikan nilai-nilai karakter dan teknologi dalam pembelajaran. Melalui kolaborasi antara pihak sekolah dan orang tua, kami yakin dapat mencetak generasi emas yang membanggakan bangsa.</p>
                 </div>
             </div>
-        </div>
-    </section>
-
-    <section id="kesimpulan" class="section">
-        <div class="container">
-            <h3 class="title">KESIMPULAN</h3>
-            <div class="conclusion-box">
-                <p>SDN 26 Tamanroja terus berinovasi dalam mengintegrasikan nilai-nilai karakter dan teknologi dalam pembelajaran. Melalui kolaborasi antara pihak sekolah dan orang tua, kami yakin dapat mencetak generasi emas yang membanggakan bangsa.</p>
-            </div>
-        </div>
-    </section>
+        </section>
+    </main>
 
     <footer>
-        <p>&copy; 2026 SDN 26 Tamanroja. | Kabupaten Pangkep</p>
+        <div class="container">
+            <p>&copy; 2026 SDN 26 Tamanroja. | Kabupaten Pangkep</p>
+            <a href="https://wa.me/6282194341995" class="whatsapp-link" target="_blank">
+                💬 Hubungi Kami via WA
+            </a>
+        </div>
     </footer>
-
-    <a href="https://wa.me/6282194341995" class="whatsapp-btn" target="_blank">
-        <span>💬 Hubungi Kami via WA</span>
-    </a>
 
 </body>
 </html>
-
