--- a/index.html
+++ b/index.html
@@ -55,44 +55,32 @@
             </div>
         </section>
 
-        <section id="galeri" class="section gray-bg">
+      <section id="galeri" class="section gray-bg">
             <div class="container">
-                <h3 class="title">GALERI KEGIATAN</h3>
+                <h3 class="title">FASILITAS UNGGULAN</h3>
                 <div class="gallery-grid">
+                    
                     <div class="gallery-card">
                         <div class="img-container">
-                            <img src="Kegiatan 1.png" alt="Kegiatan Guru Siswa Orang Tua">
+                            <img src="FASILITAS 1.png" alt="Ruang Kelas Nyaman">
                         </div>
-                        <p class="caption">Guru, siswa dan orang tua siswa</p>
+                        <p class="caption">Ruang Belajar Interaktif</p>
                     </div>
 
                     <div class="gallery-card">
                         <div class="img-container">
-                            <img src="Kegiatan 2.png" alt="Pramuka">
+                            <img src="FASILITAS 2.png" alt="Perpustakaan">
                         </div>
-                        <p class="caption">Ekstrakurikuler Pramuka</p>
+                        <p class="caption">Perpustakaan Digital</p>
                     </div>
 
                     <div class="gallery-card">
                         <div class="img-container">
-                            <img src="Kegiatan 3.png" alt="HUT RI">
+                            <img src="FASILITAS 3.png" alt="Area Bermain">
                         </div>
-                        <p class="caption">Kegiatan Peringatan HUT RI</p>
+                        <p class="caption">Area Kreativitas Siswa</p>
                     </div>
 
-                    <div class="gallery-card">
-                        <div class="img-container">
-                            <img src="Kegiatan 4.png" alt="Kegiatan Seni">
-                        </div>
-                        <p class="caption">Guru dan siswa setelah kegiatan seni</p>
-                    </div>
-
-                    <div class="gallery-card">
-                        <div class="img-container">
-                            <img src="Kegiatan 5.png" alt="Hari Guru">
-                        </div>
-                        <p class="caption">Kegiatan seni pada peringatan hari guru</p>
-                    </div>
                 </div>
             </div>
         </section>
@@ -118,3 +106,4 @@
 
 </body>
 </html>
+
