--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
                         <div class="img-container">
                             <img src="FASILITAS 2.png" alt="Perpustakaan">
                         </div>
-                        <p class="caption">Perpustakaan Digital</p>
+                        <p class="caption">Perpustakaan</p>
                     </div>
 
                     <div class="gallery-card">
                         <div class="img-container">
-                            <img src="FASILITAS 3.png" alt="Area Bermain">
+                            <img src="FASILITAS 3.png" alt="Masjid">
                         </div>
-                        <p class="caption">Area Kreativitas Siswa</p>
+                        <p class="caption">Masjid sekolah</p>
                     </div>
 
                 </div>
@@ -106,4 +106,5 @@
 
 </body>
 </html>
+
 
