--- a/index.html
+++ b/index.html
@@ -64,21 +64,21 @@
                         <div class="img-container">
                             <img src="FASILITAS 1.png" alt="Ruang Kelas Nyaman">
                         </div>
-                        <p class="caption">Ruang Belajar Interaktif</p>
+                        <p class="caption">Ruang kelas ber-AC dengan fasilitas multimedia, proyektor interaktif, dan penataan ergonomis untuk pembelajaran yang efektif dan menyenangkan.</p>
                     </div>
 
                     <div class="gallery-card">
                         <div class="img-container">
                             <img src="FASILITAS 2.png" alt="Perpustakaan">
                         </div>
-                        <p class="caption">Perpustakaan</p>
+                        <p class="caption">Koleksi lebih dari 5.000 buku dengan ruang baca yang nyaman, sistem perpustakaan digital, dan akses internet untuk mendukung literasi siswa.</p>
                     </div>
 
                     <div class="gallery-card">
                         <div class="img-container">
                             <img src="FASILITAS 3.png" alt="Masjid">
                         </div>
-                        <p class="caption">Masjid sekolah</p>
+                        <p class="caption">Tempat ibadah yang luas dan nyaman untuk kegiatan keagamaan, sholat berjamaah, dan pembinaan spiritual siswa secara berkelanjutan.</p>
                     </div>
 
                 </div>
@@ -106,5 +106,6 @@
 
 </body>
 </html>
+
 
 
